--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.3.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -24,7 +24,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   page_view_indicators: ^1.3.1
+  flutter_blue: ^0.7.1+1
+  permission_handler: ^5.0.0+hotfix.3
+  mobx: ^1.1.1
+  flutter_mobx: ^1.1.0
 
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  build_runner: ^1.8.1
+  mobx_codegen: ^1.0.3
+  
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
