--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,14 @@ dependencies:
   permission_handler: ^5.0.0+hotfix.3
   mobx: ^1.1.1
   flutter_mobx: ^1.1.0
+  provider:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^1.8.1
   mobx_codegen: ^1.0.3
+
   
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
