--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,18 +23,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  page_view_indicators: ^1.3.1
-  flutter_blue: ^0.7.1+1
-  permission_handler: ^5.0.0+hotfix.3
-  mobx: ^1.1.1
-  flutter_mobx: ^1.1.0
+  page_view_indicators:
+  flutter_blue: 
+  permission_handler:
+  mobx: 
+  flutter_mobx:
   provider:
+  geolocator: 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.8.1
-  mobx_codegen: ^1.0.3
+  build_runner: 
+  mobx_codegen: 
 
   
 # For information on the generic Dart part of this file, see the
