--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,17 +23,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  page_view_indicators:
-  flutter_blue: 
-  permission_handler:
-  mobx: 
-  flutter_mobx:
-  provider:
-  geolocator: 
-
+  page_view_indicators: ^1.3.1
+  flutter_blue: ^0.7.2
+  permission_handler: ^5.0.0+hotfix.3
+  mobx: ^1.1.1
+  flutter_mobx: ^1.1.0
+  provider: ^4.0.5
+  geolocator: ^5.3.1
+  auto_size_text: ^2.1.0
+  quiver: ^2.1.3
+  
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   build_runner: 
   mobx_codegen: 
 
