--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: ppgcc_flutter_iot_ble_data_gatherer
+name: knee_kinematic_monitor
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
