--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
   geolocator: ^5.3.1
   auto_size_text: ^2.1.0
   quiver: ^2.1.3
-  
+  shared_preferences: ^0.5.7
+
 dev_dependencies:
   build_runner: 
   mobx_codegen: 
